# sandboxes

sandbox-go/: .gitignore  go.mod
sandbox-js/: .eslintrc.json  .gitignore  .prettierrc  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
sandbox-js/src/: index.test.js
sandbox-python/: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
sandbox-python/.devcontainer/: devcontainer.json  docker-compose.yml
sandbox-python/sandbox_python/: main.py
sandbox-python/src/: main.py
sandbox-python/src/tests/: test_mock.py
sandbox-python/src/utils/: mock.py
sandbox-python/tests/: test_main.py
sandbox-rust/: .gitignore
sandbox-ts/: .eslintrc.json  .gitignore  .prettierrc  babel.config.js  jest.config.js  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sandbox-ts/src/: main.test.ts  main.ts
sandbox-ts/tests/: main.test.ts
sandbox_rust/: .gitignore  Cargo.toml
