[tool.poetry]
name = "sandbox-python"
version = "0.1.0"
description = ""
authors = ["Asjad Jawed Siddiqui <asjadjawed@gmail.com>"]
readme = "README.md"
packages = [{include = "sandbox_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
autopep8 = "^1.7.0"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
